--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/favcon.png" />
+  <link rel="icon" type="image/svg+xml" href="/favcon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DIRI Sufi Counselling Center</title>
 </head>
